[gd_scene load_steps=11 format=3 uid="uid://ndbwkjbs5knl"]

[ext_resource type="Texture2D" uid="uid://c1jwycecto31e" path="res://assets/sprites/tilemap/monochrome_tilemap_transparent.png" id="1_1t28a"]
[ext_resource type="Script" uid="uid://r0ojsnnsyb0c" path="res://scripts/reset_level_door.gd" id="1_wc4m1"]
[ext_resource type="Texture2D" uid="uid://bceoxs3k8dnr4" path="res://assets/sprites/input/tilemap_white.png" id="3_ykls8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wc4m1"]
atlas = ExtResource("1_1t28a")
region = Rect2(323, 34, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_ykls8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wc4m1")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tppfo"]
size = Vector2(10, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_tppfo"]
atlas = ExtResource("3_ykls8")
region = Rect2(510, 323, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_csef1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tppfo")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_8214m"]
atlas = ExtResource("3_ykls8")
region = Rect2(323, 34, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_360sj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8214m")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[node name="ResetLevelDoor" type="Area2D"]
script = ExtResource("1_wc4m1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_ykls8")
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -6.5)
shape = SubResource("RectangleShape2D_tppfo")

[node name="RestartSymbol" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(0, -24)
rotation = 3.14159
sprite_frames = SubResource("SpriteFrames_csef1")

[node name="InputPrompt" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(0, -40)
sprite_frames = SubResource("SpriteFrames_360sj")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
